radarr and fixes

--- a/.github/lint-charts.yaml
+++ b/.github/lint-charts.yaml
@@ -4,7 +4,7 @@ lint-chart:
     - name: Checkout
       uses: actions/checkout@v1
     - name: Run chart-testing (lint)
-      uses: helm/chart-testing-action@master
+      uses: helm/chart-testing-action@main
       with:
         command: lint
         config: .github/ct.yaml
