--- a/charts/radarr/values.yaml
+++ b/charts/radarr/values.yaml
@@ -1,11 +1,11 @@
-# Default values for pms.
+# Default values for radarr.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: lscr.io/linuxserver/plex
+  repository: lscr.io/linuxserver/radarr
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
@@ -17,6 +17,8 @@ fullnameOverride: ""
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
+  # Automatically mount a ServiceAccount's API credentials?
+  automount: true
   # Annotations to add to the service account
   annotations: {}
   # The name of the service account to use.
@@ -24,6 +26,7 @@ serviceAccount:
   name: ""
 
 podAnnotations: {}
+podLabels: {}
 
 podSecurityContext: {}
   # fsGroup: 2000
@@ -38,16 +41,16 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 32400
+  port: 7878
 
 ingress:
   enabled: false
-  className: "ingress-nginx"
+  className: ""
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: plexserver
+    - host: chart-example.local
       paths:
         - path: /
           pathType: ImplementationSpecific
@@ -75,28 +78,68 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
+# Additional volumes on the output Deployment definition.
+volumes: []
+# - name: foo
+#   secret:
+#     secretName: mysecret
+#     optional: false
+
+# Additional volumeMounts on the output Deployment definition.
+volumeMounts: []
+# - name: foo
+#   mountPath: "/etc/foo"
+#   readOnly: true
+
 nodeSelector: {}
 
 tolerations: []
 
 affinity: {}
 
-plex:
+radarr:
   # The storage class to use when provisioning the pms config volume
   # this needs to be created manually, null will use the default
   storageClassName: null
   # the volume size to provision for the PMS database
   configStorage: 2Gi
-  
+  # Name of an existing `PersistentVolumeClaim` for the PMS database
+  # NOTE: When set, 'configStorage' and 'storageClassName' are ignored.
+  configExistingClaim: ""
+
+  resources: {}
+  # We usually recommend not to specify default resources and to leave this as a conscious
+  # choice for the user. This also increases chances charts run on environments with little
+  # resources, such as Minikube. If you do want to specify resources, uncomment the following
+  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+  # limits:
+  #   cpu: 100m
+  #   memory: 128Mi
+  # requests:
+  #   cpu: 100m
+  #   memory: 128Mi
+
 extraEnv:
-  # This claim is optional, and is only used for the first startup of PMS
-  # The claim is obtained from https://www.plex.tv/claim/ is is only valid for a few minutes
-  PLEX_CLAIM: "claim"
-  HOSTNAME: "PlexServer"
-  TZ: "America/NewYork"
-#   PLEX_UPDATE_CHANNEL: "5"
-#   PLEX_UID: "uid of plex user"
-#   PLEX_GID: "group id of plex user"
-  # a list of CIDRs that can use the server without authentication
-  # this is only used for the first startup of PMS
-  ALLOWED_NETWORKS: "0.0.0.0/0"  
+  TZ: "America/New_York"
+#   PUID: "1000"
+#   PGID: "1000"
+
+# Optionally specify additional volume mounts for the PMS and init containers.
+#extraVolumeMounts: []
+extraVolumeMounts:
+   - name: data
+     mountPath: /data
+#   - name: incomplete-downloads
+#     mountPath: /incomplete-downloads
+
+
+# Optionally specify additional volumes for the pod.
+#extraVolumes: []
+extraVolumes:
+   - hostPath:
+       path: /mnt/media
+       name: data
+#   - hostPath:
+#       path: /mnt/downloads/incomplete
+#     name: incomplete-downloads
+#     emptyDir: {}
